--- a/templates/sys/base.html
+++ b/templates/sys/base.html
@@ -6,6 +6,6 @@
     <script type="text/javascript" src="{{ static_url('js/demo.js') }}"></script>
 </head>
 <body>
-    <div id="main">{% block body%} {%end%}</div>
+    <div id="main"></div>
 </body>
 </html>
