添加前端流

--- a/templates/sys/base.html
+++ b/templates/sys/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script type="text/javascript" src="{{ static_url('js/demo.js') }}"></script>
-</head>
-<body>
-    <div id="main">{% block body%} {%end%}</div>
-</body>
+<html>
+	<head>
+		<meta charset="utf-8">
+		 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+		<title>hello</title>
+	<link href="../assets/css/index.css" rel="stylesheet"></head>
+	<body><script type="text/javascript" src="http://news.sohu.com/upload/ky/resloader.js"></script>
+		<div id="app"></div>
+	
+	
+	<script src="{{ static_url('js/index.js') }}"></script></body>
 </html>
