--- a/assets/view/index.html
+++ b/assets/view/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 		<title>hello</title>
-	<link href="../../assets/css/index.css" rel="stylesheet"></head>
+	</head>
 	<body><script type="text/javascript" src="http://news.sohu.com/upload/ky/resloader.js"></script>
 		<div id="app"></div>
 	
 	
-	<script src="../../assets/js/index.js"></script></body>
+	</body>
 </html>
