--- a/templates/sys/base.html
+++ b/templates/sys/base.html
@@ -5,9 +5,10 @@
 		 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 		<title>hello</title>
 	<link href="../assets/css/index.css" rel="stylesheet"></head>
-	<body><script type="text/javascript" src="http://news.sohu.com/upload/ky/resloader.js"></script>
+	<body>
+		<script type="text/javascript" src="http://news.sohu.com/upload/ky/resloader.js"></script>
+
 		<div id="app"></div>
-	
-	
-	<script src="{{ static_url('js/index.js') }}"></script></body>
+		<script src="{{ static_url('js/index.js') }}"></script>
+	</body>
 </html>
