--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -7,9 +7,7 @@
 	<link href="../assets/css/index.css" rel="stylesheet"></head>
 	<body><script type="text/javascript" src="http://news.sohu.com/upload/ky/resloader.js"></script>
 		<div id="app"></div>
+	<script type="text/javascript">{% raw cli %}</script>
 	<script src="{{ static_url('js/index.js') }}"></script>
-    <script type="text/javascript">
-		{% raw cli %}
-	</script>
     </body>
 </html>
