--- a/templates/sys/guess.edit.html
+++ b/templates/sys/guess.edit.html
@@ -1,5 +1,161 @@
 {% extends "system.html" %}
 
 {% block content %}
+<div class="col-md-6 col-md-offset-3">
+    <form action="/guess/add" id="addgueForm" method="post">
+        <div class="form-group">
+            <label>标题</label>
+            <input type="text" class="form-control" name="title" required value="{{guess.id}}">
+        </div>
+        <div class="form-group">
+            <label>选项</label>
+            <div id="sections">
+                {% for index,item in enumerate(guess.cols) %}
+                    <div class="input-group">
+                        <input type="text" id="sec-{{index}}" class="form-control" value="{{item}}">
+                        <span class="input-group-btn">
+                            <button class="btn btn-warning" id="sec-mv-{{index}}" type="button">移除</button>
+                        </span>
+                    </div>
+                {% end %}
+            </div>
+            <input type="hidden" class="form-control" name="cols" id="cols" required>
+            <div class="input-group">
+                <input type="text" class="form-control" id="section" />
+                <span class="input-group-btn">
+                    <button id="add-section" class="btn btn-default" type="button">添加</button>
+                </span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label>答案</label>
+            <div class="radio radiokey">
+                {% for index,item in enumerate(guess.cols) %}
+                    {% if guess.key == index %}
+                        <label><input type="radio" name="key" value="{{index}}" checked> 选项 {{index+1}} </label>
+                    {% else %}
+                        <label><input type="radio" name="key" value="{{index}}"> 选项 {{index+1}} </label>
+                    {% end %}
+                {% end %}
+            </div>
+        </div>
+        <div class="form-group">
+            <label>有效期</label>
+            <div class="input-group">
+                <input type="number" class="form-control" name="expires" required value="{{guess.expires}}" min="1">
+                <span class="input-group-addon">天</span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label>状态</label>
+            <div class="radio radiostate">
+                {% if guess.state == 1 %}
+                    <label class="radio-inline">
+                      <input type="radio" name="state" id="inlineRadio1" value="1" checked> 已发布
+                    </label>
+                    <label class="radio-inline">
+                      <input type="radio" name="state" id="inlineRadio2" value="0"> 撤销
+                    </label>
+                {% else %}
+                    <label class="radio-inline">
+                      <input type="radio" name="state" id="inlineRadio1" value="1"> 已发布
+                    </label>
+                    <label class="radio-inline">
+                      <input type="radio" name="state" id="inlineRadio2" value="0" checked> 撤销
+                    </label>
+                {% end %}
+            </div>
+        </div>
+        <div class="form-group">
+            <label>参与积分</label>
+            <div class="input-group">
+                <input type="number" class="form-control" name="score" value="{{guess.score}}" required min="0">
+                <span class="input-group-addon">分</span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label>奖励积分</label>
+            <div class="input-group">
+                <input type="number" class="form-control" name="reward_score" value="{{guess.reward_score}}" required min="0">
+                <span class="input-group-addon">分</span>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-default">提交</button>
+        <input type="hidden" class="form-control" name="id" value="{{guess.id}}">
+        {% raw xsrf_form_html() %}
+    </form>
+</div>
+<script type="text/javascript">
+$(document).ready(function (){
+    var totalsec = $("#sections .input-group").length;
 
+    function radiohtml(){
+        var _html = '';
+        for(var i =1; i<= totalsec; i++){
+            _html += '<label><input type="radio" name="key" id="optionsRadios'+i+'" value="'+i+'"> 选项 '+i+ ' </label>';
+        }
+        $(".radiokey").html(_html);
+    }
+
+    $("#add-section").on("click", function (e){
+        var _html = $("#sections").html();
+        totalsec ++;
+        _html += '<div class="input-group"><input type="text" id="sec-'+totalsec+'" class="form-control" value="'+$("#section").val()+'" /> <span class="input-group-btn"> <button class="btn btn-warning" id="sec-mv-'+totalsec+'" type="button">移除</button> </span></div>';
+        $("#sections").html(_html);
+        $("#section").val("");
+        radiohtml();
+    });
+
+    $("#sections").on("click", "button", function (e){
+        $(this).parent().parent().remove();
+        totalsec--;
+        $("#sections .input-group").each(function (i){
+            $(this).find('input').attr("id", "sec-"+(i+1));
+            $(this).find('button').attr("id", "sec-mv-"+(i+1));
+        });
+        radiohtml();
+    });
+
+    $("#addgueForm").submit(function (e){
+        var validl = $.validLength($("input[name=title]").val().length, 20) &&
+                    $.validLength($("input[name=expires]").val().length, 2) &&
+                    $("input[name=key]:checked").length == 1;
+
+        var _cols = "";
+        $("#sections .input-group").each(function (i){
+            if(i == $("#sections .input-group").length - 1){
+                _cols += $(this).find('input').val();
+            }
+            else{
+                _cols += $(this).find('input').val() + "|";
+            }
+        });
+
+        if(_cols=="" || !validl){ alert("表单未填写完整!"); }
+        else{
+            $("#cols").attr("value", _cols);
+            $.ajax({
+                url: '/sys/guess/add',
+                method: 'POST',
+                data: $(this).serialize(),
+                success: function (r){
+                    if(r.status == 1){
+                        alert("操作成功");
+                        window.location.href = "/sys/guess/list"
+                    }
+                }
+            });
+        }
+        return false;
+    });
+});
+</script>
+<style>
+    #sections .input-group{
+        padding: 10px 0;
+    }
+    .radio label{
+        margin: 0 15px;
+    }
+</style>
 {% end %}
