--- a/templates/sys/research.edit.html
+++ b/templates/sys/research.edit.html
@@ -2,14 +2,23 @@
 
 {% block content %}
 <div class="col-md-6 col-md-offset-3">
-    <form action="/guess/add" id="addgueForm" method="post">
+    <form action="/sys/research/add" id="addresForm" method="post">
         <div class="form-group">
             <label>标题</label>
-            <input type="text" class="form-control" name="title" required>
+            <input type="text" class="form-control" name="title" required value="{{research.id}}">
         </div>
         <div class="form-group">
             <label>选项</label>
-            <div id="sections"></div>
+            <div id="sections">
+                {% for index,item in enumerate(research.cols) %}
+                    <div class="input-group">
+                        <input type="text" id="sec-{{index}}" class="form-control" value="{{item}}">
+                        <span class="input-group-btn">
+                            <button class="btn btn-warning" id="sec-mv-{{index}}" type="button">移除</button>
+                        </span>
+                    </div>
+                {% end %}
+            </div>
             <input type="hidden" class="form-control" name="cols" id="cols" required>
             <div class="input-group">
                 <input type="text" class="form-control" id="section" />
@@ -19,56 +28,47 @@
             </div>
         </div>
         <div class="form-group">
-            <label>答案</label>
-            <div class="radio radiokey"></div>
-        </div>
-        <div class="form-group">
             <label>有效期</label>
             <div class="input-group">
-                <input type="number" class="form-control" name="expires" required value="1" min="1">
+                <input type="number" class="form-control" name="expires" required value="{{research.expires}}" min="1">
                 <span class="input-group-addon">天</span>
             </div>
         </div>
         <div class="form-group">
             <label>状态</label>
             <div class="radio radiostate">
-                <label class="radio-inline">
-                  <input type="radio" name="state" id="inlineRadio1" value="1"> 已发布
-                </label>
-                <label class="radio-inline">
-                  <input type="radio" name="state" id="inlineRadio2" value="0" checked> 撤销
-                </label>
-            </div>
-        </div>
-        <div class="form-group">
-            <label>参与积分</label>
-            <div class="input-group">
-                <input type="number" class="form-control" name="score" value="0" required min="0">
-                <span class="input-group-addon">分</span>
+                {% if research.state == 1 %}
+                    <label class="radio-inline">
+                      <input type="radio" name="state" id="inlineRadio1" value="1" checked> 已发布
+                    </label>
+                    <label class="radio-inline">
+                      <input type="radio" name="state" id="inlineRadio2" value="0"> 撤销
+                    </label>
+                {% else %}
+                    <label class="radio-inline">
+                      <input type="radio" name="state" id="inlineRadio1" value="1"> 已发布
+                    </label>
+                    <label class="radio-inline">
+                      <input type="radio" name="state" id="inlineRadio2" value="0" checked> 撤销
+                    </label>
+                {% end %}
             </div>
         </div>
         <div class="form-group">
             <label>奖励积分</label>
             <div class="input-group">
-                <input type="number" class="form-control" name="reward_score" value="0" required min="0">
+                <input type="number" class="form-control" name="reward_score" value="{{research.reward_score}}" required min="0">
                 <span class="input-group-addon">分</span>
             </div>
         </div>
         <button type="submit" class="btn btn-default">提交</button>
+        <input type="hidden" class="form-control" name="id" value="{{research.id}}">
         {% raw xsrf_form_html() %}
     </form>
 </div>
 <script type="text/javascript">
 $(document).ready(function (){
-    var totalsec = 0;
-
-    function radiohtml(){
-        var _html = '';
-        for(var i =1; i<= totalsec; i++){
-            _html += '<label><input type="radio" name="key" value="'+(i-1)+'"> 选项 '+i+ ' </label>';
-        }
-        $(".radiokey").html(_html);
-    }
+    var totalsec = $("#sections .input-group").length;
 
     $("#add-section").on("click", function (e){
         var _html = $("#sections").html();
@@ -76,7 +76,6 @@ $(document).ready(function (){
         _html += '<div class="input-group"><input type="text" id="sec-'+totalsec+'" class="form-control" value="'+$("#section").val()+'" /> <span class="input-group-btn"> <button class="btn btn-warning" id="sec-mv-'+totalsec+'" type="button">移除</button> </span></div>';
         $("#sections").html(_html);
         $("#section").val("");
-        radiohtml();
     });
 
     $("#sections").on("click", "button", function (e){
@@ -86,13 +85,11 @@ $(document).ready(function (){
             $(this).find('input').attr("id", "sec-"+(i+1));
             $(this).find('button').attr("id", "sec-mv-"+(i+1));
         });
-        radiohtml();
     });
 
     $("#addgueForm").submit(function (e){
         var validl = $.validLength($("input[name=title]").val().length, 20) &&
-                    $.validLength($("input[name=expires]").val().length, 2) &&
-                    $("input[name=key]:checked").length == 1;
+                    $.validLength($("input[name=expires]").val().length, 2);
 
         var _cols = "";
         $("#sections .input-group").each(function (i){
@@ -108,13 +105,13 @@ $(document).ready(function (){
         else{
             $("#cols").attr("value", _cols);
             $.ajax({
-                url: '/sys/guess/add',
+                url: '/sys/research/add',
                 method: 'POST',
                 data: $(this).serialize(),
                 success: function (r){
                     if(r.status == 1){
                         alert("操作成功");
-                        window.location.href = "/sys/guess/list"
+                        window.location.href = "/sys/research/list"
                     }
                 }
             });
