--- a/templates/sys/research.list.html
+++ b/templates/sys/research.list.html
@@ -7,32 +7,28 @@
         <td>ID</td>
         <td>标题</td>
         <td class="col-lg-3">选项</td>
-        <td>答案</td>
         <td>状态</td>
         <td>创建时间</td>
         <td>过期时间</td>
         <td>奖励积分</td>
-        <td>参与积分</td>
         <td>操作</td>
     </tr>
     </thead>
     <tbody>
-        {% for g in guess %}
+        {% for r in research %}
             <tr>
-                <td>{{g.id}}</td>
-                <td>{{g.title}}</td>
+                <td>{{r.id}}</td>
+                <td>{{r.title}}</td>
                 <td class="col-lg-3">
-                    {% for c in g.cols %}
+                    {% for c in r.cols %}
                        {{c}} <br><br>
                     {% end %}
                 </td>
-                <td>{{g.key}}</td>
-                <td>{{g.state}}</td>
-                <td>{{g.create_time}}</td>
-                <td>{{g.expires}}</td>
-                <td>{{g.reward_score}}</td>
-                <td>{{g.score}}</td>
-                <td><a class="btn btn-xs btn-primary" href="/sys/guess/edit/{{g.id}}" target="_blank">编辑</a></td>
+                <td>{{r.state}}</td>
+                <td>{{r.create_time}}</td>
+                <td>{{r.expires}}</td>
+                <td>{{r.reward_score}}</td>
+                <td><a class="btn btn-xs btn-primary" href="/sys/research/edit/{{r.id}}" target="_blank">编辑</a></td>
             </tr>
         {% end %}
     </tbody>
