--- a/templates/sys/system.html
+++ b/templates/sys/system.html
@@ -36,10 +36,24 @@
             </ul>
         </li>
         <li>
+            <a href="#"><i class="glyphicon glyphicon-home"></i>商城管理</a>
+            <ul class="sub-nav">
+                <li class="product-add">
+                    <a href="/sys/client/list">添加产品</a>
+                </li>
+                <li class="product-list">
+                    <a href="/sys/client/list">产品列表</a>
+                </li>
+                <li class="order-list">
+                    <a href="/sys/client/list">订单列表</a>
+                </li>
+            </ul>
+        </li>
+        <li>
             <a href="#"><i class="glyphicon glyphicon-user"></i>客户管理</a>
             <ul class="sub-nav">
                 <li class="client-list">
-                    <a href="/sys/guess/list">用户列表</a>
+                    <a href="/sys/client/list">用户列表</a>
                 </li>
             </ul>
         </li>
