--- a/templates/sys/guess.edit.html
+++ b/templates/sys/guess.edit.html
@@ -5,7 +5,7 @@
     <form action="/guess/add" id="addgueForm" method="post">
         <div class="form-group">
             <label>标题</label>
-            <input type="text" class="form-control" name="title" required value="{{guess.id}}">
+            <input type="text" class="form-control" name="title" required value="{{guess.title}}">
         </div>
         <div class="form-group">
             <label>选项</label>
