yf： backend manage

--- a/templates/sys/system.html
+++ b/templates/sys/system.html
@@ -39,13 +39,13 @@
             <a href="#"><i class="glyphicon glyphicon-home"></i>商城管理</a>
             <ul class="sub-nav">
                 <li class="product-add">
-                    <a href="/sys/client/list">添加产品</a>
+                    <a href="/sys/product/add">添加产品</a>
                 </li>
                 <li class="product-list">
-                    <a href="/sys/client/list">产品列表</a>
+                    <a href="/sys/product/list">产品列表</a>
                 </li>
                 <li class="order-list">
-                    <a href="/sys/client/list">订单列表</a>
+                    <a href="/sys/order/list">订单列表</a>
                 </li>
             </ul>
         </li>
