--- a/templates/sys/research.list.html
+++ b/templates/sys/research.list.html
@@ -43,14 +43,14 @@
 </table>
 <div class="btn-group">
     {% if prevpage is None or prevpage == False %}
-        <a href="/sys/guess/list" class="btn btn-default" disabled="disabled">上一页</a>
+        <a href="/sys/research/list" class="btn btn-default" disabled="disabled">上一页</a>
     {% else %}
-        <a href="/sys/guess/list-{{prevpage}}" class="btn btn-default">上一页</a>
+        <a href="/sys/research/list-{{prevpage}}" class="btn btn-default">上一页</a>
     {% end %}
     {% if nextpage is None or nextpage == False %}
-        <a href="/sys/guess/list" class="btn btn-default" disabled="disabled">下一页</a>
+        <a href="/sys/research/list" class="btn btn-default" disabled="disabled">下一页</a>
     {% else %}
-        <a href="/sys/guess/list-{{nextpage}}" class="btn btn-default">下一页</a>
+        <a href="/sys/research/list-{{nextpage}}" class="btn btn-default">下一页</a>
     {% end %}
 </div>
 {% end %}
