--- a/templates/sys/product.list.html
+++ b/templates/sys/product.list.html
@@ -19,7 +19,7 @@
         {% for p in products %}
             <tr>
                 <td class="col-lg-1">
-                    <img src="{{p.imgs[0]}}" alt="" width="60" height="60">
+                    <a href="/api/product{{p.id}}.json" target="_blank"><img src="{{p.imgs[0]}}" alt="" width="60" height="60"></a>
                 </td>
                 <td class="col-lg-1">{{p.id}}</td>
                 <td class="col-lg-3"><b>{{p.name}}</b></td>
